--- a/style.css
+++ b/style.css
@@ -1,9 +1,33 @@
 body {
-    color:white;
+    color:rgb(31, 30, 30);
     background: black;
     margin: 0px;
+    font-family: "Ubuntu Mono", monospace;
 }
 
 header {
-    bonder-bottom: solid 2px rgb(38, 28, 122);
+    border-bottom: solid 2px rgb(122, 28, 28);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228 );
+}
+
+section{
+    background: rgb(255, 203, 30);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+.ChamadaDeTexto{
+    margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
 }
