--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
-    color:rgb(31, 30, 30);
+    color:rgb(0, 0, 0);
     background: black;
     margin: 0px;
     font-family: "Ubuntu Mono", monospace;
+    margin-bottom: 100px;
 }
 
 header {
@@ -12,7 +13,7 @@ header {
     color: rgb(42, 122, 228 );
 }
 
-section{
+.chamada {
     background: rgb(255, 203, 30);
     padding-bottom: 80px;
     padding-top: 80px;
@@ -30,4 +31,30 @@ h1 {
 
 p {
     font-size: 20px;
+}
+
+.categoria-videos {
+    display: flex
+ overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 1px solid white;
+}
+
+.categoria h2 {
+    color:rgb(42, 122, 228 );
 }
